# gofile-client

./: .gitignore  Pipfile  README.md  setup.cfg
.github/workflows/: publish.yml
src/gofile/: __init__.py  client.py
