[metadata]
name = gofile-client
version = attr: gofile.__version__
author = rdnkarchiver
author_email = rdnkarchiver@protonmail.com
description = Interact with the gofile.io API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdnkarchiver/gofile-client
project_urls =
    Bug Tracker = https://github.com/rdnkarchiver/gofile-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
install_requires =
    requests

[options.packages.find]
where=src
